# cluster-api-provider-aws

./: .gitignore  Makefile  WORKSPACE
api/conversion/: cluster_test.go
api/v1alpha2/: conversion.go  zz_generated.conversion.go
cloud/aws/actuators/cluster/: BUILD
cloud/aws/actuators/machine/: BUILD
cloud/aws/controllers/machine/: BUILD
cloud/aws/deployer/: BUILD
cloud/aws/services/cloudformation/: BUILD
cloud/aws/services/ec2/: BUILD
cloud/aws/services/elb/: BUILD
cloud/aws/services/wait/: BUILD
clusterctl/: BUILD
cmd/cluster-controller/: BUILD
cmd/clusterawsadm/client/: BUILD
cmd/clusterawsadm/cmd/: BUILD
cmd/clusterawsadm/cmd/alpha/: BUILD
cmd/clusterawsadm/cmd/alpha/bootstrap/: BUILD
cmd/machine-controller/: BUILD
cmd/manager/: BUILD
hack/: update-bazel.sh
hack/cluster-api-dev-helper/cmd/: BUILD
pkg/apis/awsprovider/v1alpha1/: BUILD
pkg/apis/awsproviderconfig/v1alpha1/: BUILD
pkg/apis/conversion/: BUILD.bazel  cluster.go  cluster_test.go  machine.go  machine_test.go  main.go
pkg/apis/conversion/cmd/: BUILD.bazel  main.go
pkg/apis/conversion/testdata/: v1a1.yaml  v1a2.yaml
pkg/cloud/aws/actuators/cluster/: BUILD
pkg/cloud/aws/actuators/cluster/mock_clusteriface/: BUILD
pkg/cloud/aws/actuators/machine/: BUILD
pkg/cloud/aws/actuators/machine/mock_machineiface/: BUILD
pkg/cloud/aws/services/: BUILD
pkg/cloud/aws/services/awserrors/: BUILD
pkg/cloud/aws/services/certificates/: BUILD
pkg/cloud/aws/services/cloudformation/: BUILD
pkg/cloud/aws/services/ec2/: BUILD
pkg/cloud/aws/services/ec2/mock_ec2iface/: BUILD
pkg/cloud/aws/services/elb/: BUILD
pkg/cloud/aws/services/elb/mock_elbiface/: BUILD
pkg/cloud/aws/services/mocks/: BUILD
pkg/cloud/aws/services/sts/: BUILD
pkg/cloud/aws/services/wait/: BUILD
pkg/controller/: BUILD
