load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_test(
    name = "go_default_test",
    srcs = [
        "cluster_test.go",
        "machine_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    deps = [
        "//pkg/apis/awsprovider/v1alpha1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime/serializer:go_default_library",
        "//vendor/sigs.k8s.io/cluster-api/pkg/apis/deprecated/v1alpha1:go_default_library",
    ],
)

go_library(
    name = "go_default_library",
    srcs = [
        "asserter.go",
        "cluster.go",
        "machine.go",
        "main.go",
    ],
    importpath = "sigs.k8s.io/cluster-api-provider-aws/pkg/apis/conversion",
    visibility = ["//visibility:public"],
    deps = [
        "//api/v1alpha2:go_default_library",
        "//pkg/apis/awsprovider/v1alpha1:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
        "//vendor/sigs.k8s.io/cluster-api/api/v1alpha2:go_default_library",
        "//vendor/sigs.k8s.io/cluster-api/pkg/apis/deprecated/v1alpha1:go_default_library",
        "//vendor/sigs.k8s.io/yaml:go_default_library",
    ],
)
